--- a/GoldenLeague.Database/GoldenLeagueDB.tt
+++ b/GoldenLeague.Database/GoldenLeagueDB.tt
@@ -113,6 +113,7 @@
 	//Tables["Complaints"].Columns.Remove("Gps");
 	//Tables["DictDamageGroups"].Columns["GroupId"].SkipOnInsert = true;
 	Tables["Matches"].Columns["MatchId"].SkipOnInsert = true;
+	Tables["Competitions"].Columns["CompetitionsId"].SkipOnInsert = true;
 
 	// TRIK ŻEBY PROCEDURA W KODZIE ZWRACAŁA JAKO TYP OKREŚLONY WIDOK - DODAĆ DO PROCEDURY KAWAŁEK KODU KTÓRY SIĘ NIE WYKONA, ALE ZWRACA CAŁY WIDOK:
 	// IF 1=0
